# qq-music

./: Actions.qml  CMakeLists.txt  CMakeLists.txt.user.05e29ee  CMakeLists.txt.user.3ced4fa  Content.qml  Dialogs.qml  Functions.qml  Left.qml  Main.qml  MoveSlider.qml  Player.qml  QQ-Music.docx  Qbottom.qml  Qleft.qml  Qright.qml  Right.qml  Volume.qml  img.qrc  lrcfilereader.cpp  lrcfilereader.h  main.cpp  main.qml  qqMusic.qml  qqMusic.qmlproject  source.qrc
MusicUi/Bottom/: BottomPage.qml
MusicUi/Left/: LeftPage.qml
MusicUi/Right/: RightPage.qml
music/: Go_Beyond_Andy.lrc  Justin Timberlake - Five Hundred Miles.lrc  恋恋风尘.lrc  海阔天空.lrc
